--- a/imputation.Rmd
+++ b/imputation.Rmd
@@ -28,6 +28,8 @@ LFQ[LFQ == 0] <- NA
 LFQ.log <- log2(LFQ)
 ```
 
+# Imputation
+
 ```{r imputation using Mateusz code}
 impute_data = function(df, width = 0.3, downshift = 1.8, seed = 7694) {
   # df = data frame containing filtered data
@@ -60,6 +62,8 @@ LFQ.imp <- as.data.frame(lapply(LFQ.log, function(col) impute_data(col)))
 LFQ.TOTALS <- LFQ.imp %>% select(contains('TOTALS'))
 write.csv(LFQ.TOTALS, file = './data/LFQ_raw_totals_imp.csv', sep=',', col.names = TRUE, row.names = FALSE)
 ```
+
+# Additional opperations
 
 ```{r TOTALS data}
 # Extracting only TOTALS data for wild type and knockout
